chore: change implementation now that retirement is symetric